k8s/kind/gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass

metadata:
  name: envoy-gateway-class

spec: 
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
