k8s/kind/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: api-gateway
  namespace: job-queue

spec: 
  gatewayClassName: envoy-gateway-class
  
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: api-gateway-proxy-config

  listeners:
    - name: http
      protocol: HTTP
      port: 80
    
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: api-gateway-tls
