k8s/kind/gateway/api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: api-route
  namespace: job-queue

spec:
  parentRefs:
    - name: api-gateway
  
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
          - name: api-service
            port: 8000
